<resources>
    <string name="app_name">Alan Cars d.o.o.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Cars</string>
    <string name="menu_gallery">Cars Gallery</string>
    <string name="menu_about">About</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>

    <string name="hello_car_lover">Hello Car Lover!</string>
    <string name="login_text">Please Login or Create Account to use our application</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="please_enter_your_email">Email...</string>
    <string name="password">Password...</string>
    <string name="btn_login">Login</string>
    <string name="register_your_account">Register Your Account</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register_account">Register Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_home_main">HomeMainActivity</string>
    <string name="no_internet">No internet!</string>
    <string name="action_exit">Exit</string>
    <string name="exit">Exit</string>
    <string name="exit_promp">Do you want to exit?</string>
    <string name="cancle">cancle</string>
    <string name="menu_profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="logout_prompt">Are you sure you want to logout?</string>
    <string name="change_password">Change password</string>
    <string name="change_password_prompt">You really want to change password?</string>
    <string name="btn_update">Update Car Information</string>
    <string name="btn_edit">Edit Car Info</string>
    <string name="btn_delete">Delete Car</string>
    <string name="menu_add_new_car">Add New Car</string>
    <string name="btn_create">Create new car</string>
    <string name="please_wait_application_is_loading">Please wait, application is loading...</string>
    <string name="welcome_to_alan_cars">Welcome to Alan Cars</string>
    <string name="your_profile">Your Profile</string>
    <string name="enter_your_new_password">Enter your new password...</string>
    <string name="your_email_cannot_be_changed_maybe_in_other_version">Your email: (Cannot be changed, maybe in other version)</string>
    <string name="about_app">ABOUT APP</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_in_vitae_sem_eu_ligula_blandit_suscipit_phasellus_aliquet_suscipit_cursus_pellentesque_tempus_ex_quis_augue_semper_luctus_aliquam_porttitor_mi_nunc_efficitur_iaculis_velit_porta_vel_etiam_in_leo_ultricies_laoreet_est_et_lacinia_turpis_in_non_consequat_leo_vel_mollis_ante_fusce_non_porta_nunc_vivamus_gravida_augue_sapien_eget_sagittis_felis_placerat_sit_amet">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vitae sem eu ligula blandit suscipit. Phasellus aliquet suscipit cursus. Pellentesque tempus ex quis augue semper luctus. Aliquam porttitor mi nunc, efficitur iaculis velit porta vel. Etiam in leo ultricies, laoreet est et, lacinia turpis. In non consequat leo, vel mollis ante. Fusce non porta nunc. Vivamus gravida augue sapien, eget sagittis felis placerat sit amet.</string>
    <string name="developed_by_alan_dautovic_3rp1">Developed by Alan Dautovic - 3RP1</string>
    <string name="make">Make:</string>
    <string name="year">Year:</string>
    <string name="fuel_type">Fuel Type:</string>
    <string name="model">Model:</string>
    <string name="menu_maps">Maps</string>
    <string name="btn_random_notification">Create random notification</string>
    <string name="notification_name">Your Daily Random Notification</string>
    <string name="notification_description">Random description</string>
    <string name="no_internet_text">No internet, today, calling ambulance</string>
    <string name="data_imported">Data already imported</string>
    <string name="car_maker">Car Maker</string>
    <string name="enter_car_maker">Enter car maker...</string>
    <string name="car_model">Car Model</string>
    <string name="enter_car_model">Enter car model...</string>
    <string name="car_class">Car Class</string>
    <string name="enter_car_class">Enter car class...</string>
    <string name="car_city_mile_per_gallon">Car City Mile Per Gallon</string>
    <string name="enter_city_mpg">Enter City MPG...</string>
    <string name="car_combination_mpg">Car Combination MPG</string>
    <string name="enter_combination_mpg">Enter Combination MPG...</string>
    <string name="car_cylinders">Car Cylinders</string>
    <string name="enter_cylinders">Enter Cylinders...</string>
    <string name="car_displacement">Car Displacement</string>
    <string name="enter_displacement">Enter Displacement...</string>
    <string name="car_drive">Car Drive</string>
    <string name="enter_drive">Enter Drive...</string>
    <string name="car_fuel_type">Car Fuel Type</string>
    <string name="enter_fuel_type">Enter Fuel Type...</string>
    <string name="car_highway_mpg">Car Highway MPG</string>
    <string name="enter_highway_mpg">Enter Highway MPG...</string>
    <string name="car_transmission">Car Transmission</string>
    <string name="enter_transmission">Enter Transmission...</string>
    <string name="car_year">Car Year</string>
    <string name="enter_car_year">Enter car year...</string>
    <string name="car_price">Car Price</string>
    <string name="enter_car_price">Enter car price...</string>
    <string name="reset_password">Reset Password</string>
    <string name="update_profile">Update profile</string>
    <string name="first_name">Enter first name...</string>
    <string name="last_name">Enter last name...</string>
    <string name="password_changed">Password changed successfully</string>
    <string name="went_wrong">Something went wrong! Contact BOSS! Or logout and try again</string>
    <string name="check_email">Check your email for password reset link!</string>
    <string name="profile_updated">Your profile was updated</string>
    <string name="are_you_a_new_user">Are you a new user?</string>
    <string name="login_activity">Login</string>
    <string name="enter_first_name">Enter first name...</string>
    <string name="first_name_title">First Name:</string>
    <string name="last_name_title">Last name:</string>
    <string name="enter_last_name">Enter last name...</string>
    <string name="edit_car">Edit Car</string>
    <string name="your_email_will_be_displayed_here">Your email will be displayed here!</string>
    <string name="rationale_permission">Application cannot function without Location Permission</string>
    <string name="car_lover">Hello Car Lover! Setup Name in Profile Settings</string>
    <string name="yes">Yes</string>
    <string name="daily_not_title">Go visit the app</string>
    <string name="daily_not_content">Do not forget to constantly log in in our application hehe</string>
    <string name="ok">Ok</string>
    <string name="permission_granted">Permission successfully Granted</string>

</resources>