<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/pager_padding"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:src="@drawable/mercedes"
            android:id="@+id/ivCar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/picture_height" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/pager_header"
            android:text="@string/menu_add_new_car" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:hint="@string/car_maker"
            app:startIconDrawable="@drawable/baseline_directions_car_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCarMaker"
                android:layout_width="match_parent"
                style="@style/TextInputEditText"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:hint="@string/car_model"
            app:startIconDrawable="@drawable/baseline_view_carousel_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCarModel"
                android:layout_width="match_parent"
                style="@style/TextInputEditText"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:hint="@string/car_class"
            app:startIconDrawable="@drawable/baseline_class_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCarClass"
                android:layout_width="match_parent"
                style="@style/TextInputEditText"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:hint="@string/car_city_mile_per_gallon"
            app:startIconDrawable="@drawable/baseline_location_city_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCarCityMpg"
                android:layout_width="match_parent"
                style="@style/TextInputEditText"
                android:inputType="number"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:hint="@string/car_combination_mpg"
            app:startIconDrawable="@drawable/baseline_toggle_on_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCarCombinationMpg"
                android:layout_width="match_parent"
                style="@style/TextInputEditText"
                android:inputType="number"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:hint="@string/car_cylinders"
            app:startIconDrawable="@drawable/baseline_carpenter_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCylinders"
                android:layout_width="match_parent"
                style="@style/TextInputEditText"
                android:inputType="number"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:hint="@string/car_displacement"
            app:startIconDrawable="@drawable/baseline_engineering_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCarDisplacement"
                android:layout_width="match_parent"
                style="@style/TextInputEditText"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:hint="@string/car_drive"
            app:startIconDrawable="@drawable/baseline_directions_car_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCarDrive"
                android:layout_width="match_parent"
                style="@style/TextInputEditText"
                android:inputType="text"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:hint="@string/car_fuel_type"
            app:startIconDrawable="@drawable/baseline_gas_meter_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCarFuelType"
                android:layout_width="match_parent"
                style="@style/TextInputEditText"
                android:inputType="text"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:hint="@string/car_highway_mpg"
            app:startIconDrawable="@drawable/baseline_edit_road_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCarHighwayMpg"
                android:layout_width="match_parent"
                style="@style/TextInputEditText"
                android:inputType="number"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:hint="@string/car_transmission"
            app:startIconDrawable="@drawable/baseline_build_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCarTransmission"
                android:layout_width="match_parent"
                style="@style/TextInputEditText"
                android:inputType="text"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:hint="@string/car_year"
            app:startIconDrawable="@drawable/baseline_access_time_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCarYear"
                android:layout_width="match_parent"
                style="@style/TextInputEditText"
                android:inputType="number"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            android:hint="@string/car_price"
            app:startIconDrawable="@drawable/baseline_attach_money_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCarPrice"
                android:layout_width="match_parent"
                style="@style/TextInputEditText"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="@dimen/marginTop"
            android:id="@+id/btnAddCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_create"
            style="@style/ButtonGreen" />

    </LinearLayout>

</ScrollView>